<resources>
    <string name="app_name">EPIC GAMES</string>
    <string name="MediaPlayer">Audio con MediaPlayer</string>

    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="title_activity_menu">Menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!--String nuevos sobre el Perfilusuario-->
    <string name="MiPerfiltxt">PERFIL</string>
    <string name="select">Seleccionar Pais</string>
    <string name="Mipuntuaciontxt">Mejor puntuación</string>
    <string name="Correo">--</string>
    <string name="Nombreusuario">--</string>
    <string name="Menutxt">Menu</string>
    <string name="uid">--</string>

    <string name="Jugarbtn">Jugar</string>
    <string name="EditarBtn">Galeria</string>
    <string name="CambiarPassBtn">Cambiar contraseña</string>
    <string name="Puntuacionesbtn">Puntuaciones</string>
    <string name="Acercadebtn">Acerca de</string>
    <string name="btnCerrar_perfil">Cerrar sesion</string>
    <string name="Alias">--</string>

    <!-- Cronometro modo prueba capaz no funcione  el cronometro estaba en el numeros.class -->
    <string name="chronometer1">Conometro</string>
    <string name="title_activity_menu2">menu2</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu3">menu3</string>

    <string name="NombreJugador">Nombre</string>
    <string name="CorreoJugador">Correo</string>
    <string name="PuntajeJugador">Puntaje</string>

    <!--cambiar contraseña-->
    <string name="ActualPass">Contraseña actual</string>
    <string name="NuevaPass">Nueva contraseña</string>
    <string name="CambiarPass">Cambiar contraseña</string>

    <!--AcercaDe-->
    <string name="DesarrolladorPORTXT">Desarrollado Por:</string>
    <string name="IntegrantesTXT">
        Claudio Silva\n
        Oscar Ampuero\n
        Lucas Becker\n
        Humberto Oyarzo</string>
    <string name="ok">OK</string>

    <!--seleccionar correo/usuario-->
    <string name="selectCuenta2">Seleccionar Cuenta</string>

    <!--seleccionar correo/cuenta nuevo activity-->
    <string name="selectCuenta1">Seleccionar Cuenta</string>


</resources>